--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.5",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
